# E-Voting-System

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
experimental/: README.md
experimental/bitvec-0.22.3/: Cargo.toml
experimental/certificate-stark/: Cargo.toml  log.txt
experimental/certificate-stark/benches/: schnorr.rs
experimental/certificate-stark/src/: lib.rs  log.txt
experimental/openvote/: Cargo.toml
experimental/openvote/benches/: cds.rs  merkle.rs  merkle_proof.rs  rescue.rs  schnorr.rs  tally.rs
experimental/openvote/src/: lib.rs
experimental/openvote/src/aggregator/: mod.rs
experimental/openvote/src/cds/: air.rs  constants.rs  mod.rs  prover.rs  tests.rs  trace.rs
experimental/openvote/src/merkle/: air.rs  constants.rs  mod.rs  prover.rs  tests.rs
experimental/openvote/src/merkle_proof/: mod.rs  prover.rs  tests.rs  trace.rs
experimental/openvote/src/range/: mod.rs  tests.rs
experimental/openvote/src/schnorr/: air.rs  mod.rs  prover.rs  tests.rs  trace.rs
experimental/openvote/src/tally/: constants.rs  mod.rs  prover.rs  tests.rs
experimental/openvote/src/utils/: ecc.rs
experimental/winterfell-mod/math/: Cargo.toml
implementation/: README.md
misc/: Untitled.ipynb
misc/criterion-2/report/: index.html
openvote-contracts/: foundry.toml
openvote-contracts/src/: OpenVote.sol
openvote-contracts/test/: OpenVote.t.sol
openvote/cheetah/: Cargo.toml
openvote/openvote/: Cargo.toml
openvote/openvote/benches/: cds.rs  merkle.rs  schnorr.rs  tally.rs
openvote/openvote/src/: lib.rs  (+1 more)
openvote/revm-precompile-2.0.2/: .cargo_vcs_info.json  Cargo.toml
openvote/revm-primitives-1.1.1/: .cargo_vcs_info.json  Cargo.toml
(+1052 files in other folders)
